--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
         TODO:
             hero-section
             content-area (some random information)
-            quote/testimonial-section
 
             for reference: Use Branko's example on the CSS Assignment name/file
         -->
@@ -71,6 +70,24 @@
                 
             </div>
 
+        </section>
+
+        <section class="quote" aria-labelledby="quote-title">
+            <h2 id="quote-title" class="sr-only">Testimonial</h2>
+            <div class="container quote-inner">
+                <figure class="quote-figure">
+                    <blockquote class="quote-text">
+                        <p>
+                            “This is an inspiring quote, or a testimonial from a customer.
+                            Maybe it's just filling up space, or maybe people will actually
+                            read it. Who knows? All i know is that it looks nice.”
+                        </p>
+                    </blockquote>
+                    <figcaption class="quote-author">
+                        - Thor
+                    </figcaption>
+                </figure>
+            </div>
         </section>
 
         <!-- Full-width CTA band with inner container -->
