--- a/index.html
+++ b/index.html
@@ -67,7 +67,17 @@
         <section class="hero-section">
 
             <div class="container hero-inner">
-                
+                <div class="hero-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. 
+                        It's a smaller font and the color is lower contrast.
+                    </p>
+                    <button class="signup-button">Sign up</button>
+                </div>
+
+                <div class="hero-image">
+                    <p>this is a placeholder for an image</p>
+                </div>
             </div>
 
         </section>
