--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         -->
         <section class="hero-section">
 
-            <div class="container hero-inner">
+            <div class="container-hero-inner">
                 <div class="hero-text">
                     <h1>This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title. 
