--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A description.">
     <!--link tags containing fontawesome stylesheets for icons and our custom styles.css file-->
-    <link rel="stylesheet" href="assets/vendor/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/vendor/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/vendor/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="./assets/vendor/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Home (CSS Responsive Template)</title>
 </head>
 
@@ -106,6 +106,7 @@
         </section>
 
         <section class="quote" aria-labelledby="quote-title">
+            <!-- hidden h2 for accessibility purposes -->
             <h2 id="quote-title" class="sr-only">Testimonial</h2>
             <div class="container quote-inner">
                 <figure class="quote-figure">
