--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A description.">
     <!--link tags containing fontawesome stylesheets for icons and our custom styles.css file-->
-    <link rel="stylesheet" href="./assets/vendor/fontawesome/css/fontawesome.min.css">
-    <link rel="stylesheet" href="./assets/vendor/fontawesome/css/solid.min.css">
-    <link rel="stylesheet" href="./assets/css/styles.css">
-    <title>Home (CSS Responsive Template)</title>
+    <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <title>About Us (CSS Responsive Template)</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <div class="header-logo">
                 <!-- Make this your <h1> or keep <h1> in main; but ensure one exists on the page -->
                 <h1 class="site-title">
-                    <a class="header-link" href="./index.html">Header logo</a>
+                    <a class="header-link" href="../index.html">Header logo</a>
                 </h1>
             </div>
             <!--Burger mode code (checkbox hidden through CSS)-->
@@ -36,19 +36,19 @@
                 <ul class="nav-list">
                     <li class="nav-item">
                         <!--aria-current is used also to highlight the active page in CSS-->
-                        <a class="nav-link" href="./index.html" aria-current="page">Home</a>
+                        <a class="nav-link" href="../index.html" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/about-us.html">About us</a>
+                        <a class="nav-link" href="../pages/about-us.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/link-one.html">Link one</a>
+                        <a class="nav-link" href="../pages/link-one.html">Link one</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/sign-up.html">Sign up</a>
+                        <a class="nav-link" href="../pages/sign-up.html">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacts.html">Contact</a>
+                        <a class="nav-link" href="../pages/contacts.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -61,7 +61,7 @@
         <section class="about-hero">
             <div class="container about"> 
                 <h1>We believe in making things awesome, together.</h1>
-                <p>[Your company's core mission statement or belief goes here. Keep it concise and inspiring.]</p>
+                <p>[Company's core mission statement or belief goes here.]</p>
             </div>
         </section>
 
@@ -190,19 +190,19 @@
             <nav class="footer-nav" aria-label="Footer">
                 <ul class="nav-list footer-list">
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html" aria-current="page">Home</a>
+                        <a class="nav-link" href="../index.html" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/about-us.html">About us</a>
+                        <a class="nav-link" href="../pages/about-us.html">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/link-one.html">Link one</a>
+                        <a class="nav-link" href="../pages/link-one.html">Link one</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/sign-up.html">Sign up</a>
+                        <a class="nav-link" href="../pages/sign-up.html">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/contacts.html">Contact</a>
+                        <a class="nav-link" href="../pages/contacts.html">Contact</a>
                     </li>
                     <!-- add any utility links here: Privacy, Terms, Sitemap, etc. -->
                 </ul>
