removed "link-one" page

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -36,19 +36,16 @@
                 <ul class="nav-list">
                     <li class="nav-item">
                         <!--aria-current is used also to highlight the active page in CSS-->
-                        <a class="nav-link" href="../index.html" aria-current="page">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/about-us.html">About us</a>
+                        <a class="nav-link" href="./about-us.html" aria-current="page">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/link-one.html">Link one</a>
+                        <a class="nav-link" href="./sign-up.html">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/sign-up.html">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacts.html">Contact</a>
+                        <a class="nav-link" href="./contacts.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -190,19 +187,16 @@
             <nav class="footer-nav" aria-label="Footer">
                 <ul class="nav-list footer-list">
                     <li class="nav-item">
-                        <a class="nav-link" href="../index.html" aria-current="page">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/about-us.html">About us</a>
+                        <a class="nav-link" href="./about-us.html" aria-current="page">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/link-one.html">Link one</a>
+                        <a class="nav-link" href="./sign-up.html">Sign up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/sign-up.html">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacts.html">Contact</a>
+                        <a class="nav-link" href="./contacts.html">Contact</a>
                     </li>
                     <!-- add any utility links here: Privacy, Terms, Sitemap, etc. -->
                 </ul>
