fixed sign up page code

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -55,7 +55,7 @@
             <div class="container">
                 <header class="signup-header">
                     <h2 class="signup-title">Create your account</h2>
-                    <p class="signup-intro">It's quick and easy—then you're in.</p>
+                    <p class="signup-intro">It's quick and easy-then you're in.</p>
                 </header>
 
                 <!-- two-column on desktop, single column on mobile -->
