--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -174,7 +174,7 @@
                     </p>
                 </div>
                 <div class="cta-actions">
-                    <a class="btn btn-outline-primary" href="./pages/sign-up.html">Sign up</a>
+                    <a class="btn btn-outline-primary" href="./sign-up.html">Sign up</a>
                 </div>
             </div>
         </section>
