added container classes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section class="info-section">
             <h2>Some random information.</h2>
 
-            <div class="info-container">
+            <div class="info-container container">
 
                 <div class="info-item">
                     <div class="info-box"></div>
