--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -79,7 +79,7 @@
         <!--services section-->
         <section class="services-section">
             <h2>What We Do</h2> 
-            <div class="services-container">
+            <div class="container services-container">
                 
                 <div class="service-item">
                     <div class="service-box"></div>
@@ -117,7 +117,7 @@
         <!--values section-->
         <section class="values-section">
             <h2>Our Values</h2> 
-            <div class="values-container">
+            <div class="container values-container">
                 <div class="value-item">
                     <div class="icon-placeholder"></div>
                     <h3>Integrity</h3>
@@ -139,7 +139,7 @@
         <!--team section-->
         <section class="team-section">
             <h2>Meet the Team</h2>
-            <div class="team-container">
+            <div class="container team-container">
                 <div class="team-member">
                     <div class="team-photo-placeholder"></div>
                     <h3>[Team Member Name]</h3>
