fixed semantics and removed a from header-logo

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -16,9 +16,7 @@
     <header>
         <div class="container header-inner">
             <div class="header-logo">
-                <h1 class="site-title">
-                    <a class="header-link" href="../index.html">Header logo</a>
-                </h1>
+                Header logo    
             </div>
 
             <!-- burger -->
@@ -54,7 +52,7 @@
         <section class="signup">
             <div class="container">
                 <header class="signup-header">
-                    <h2 class="signup-title">Create your account</h2>
+                    <h1 class="signup-title">Create your account</h1>
                     <p class="signup-intro">It's quick and easy-then you're in.</p>
                 </header>
 
