fixed semantics and removed a from header-logo

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -17,10 +17,7 @@
         <!--Header section containing the Navigation bar and burger mode-->
         <div class="container header-inner">
             <div class="header-logo">
-                <!-- Make this your <h1> or keep <h1> in main; but ensure one exists on the page -->
-                <h1 class="site-title">
-                    <a class="header-link" href="../index.html">Header logo</a>
-                </h1>
+                Header logo    
             </div>
             <!--Burger mode code (checkbox hidden through CSS)-->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
@@ -58,7 +55,7 @@
         <section class="contact" aria-labelledby="contact-title">
             <div class="container contact-inner">
                 <section class="contact-header">
-                    <h2 id="contact-title" class="contact-title">Contact us</h2>
+                    <h1 id="contact-title" class="contact-title">Contact us</h1>
                     <p class="contact-intro">
                         Have a question or feedback? Send us a message and we'll get back to you.
                     </p>
