fixed semantics and removed a from header-logo

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -17,10 +17,7 @@
         <!--Header section containing the Navigation bar and burger mode-->
         <div class="container header-inner">
             <div class="header-logo">
-                <!-- Make this your <h1> or keep <h1> in main; but ensure one exists on the page -->
-                <h1 class="site-title">
-                    <a class="header-link" href="../index.html">Header logo</a>
-                </h1>
+                Header logo    
             </div>
             <!--Burger mode code (checkbox hidden through CSS)-->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
@@ -112,6 +109,7 @@
                         this is some subtext under an illustration or image
                     </p>
                 </div>
+            </div>
         </section>
 
         <!--values section-->
