fixed semantics and removed a from header-logo

--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
         <!--Header section containing the Navigation bar and burger mode-->
         <div class="container header-inner">
             <div class="header-logo">
-                <!-- Make this your <h1> or keep <h1> in main; but ensure one exists on the page -->
-                <h1 class="site-title">
-                    <a class="header-link" href="./index.html">Header logo</a>
-                </h1>
+                Header logo    
             </div>
             <!--Burger mode code (checkbox hidden through CSS)-->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
@@ -59,7 +56,7 @@
 
             <div class="container hero-inner">
                 <div class="hero-copy">
-                    <h2 class="hero-title">This website is awesome</h2>
+                    <h1 class="hero-title">This website is awesome</h1>
                     <p class="hero-text">
                         This website has some subtext that goes here under the main title. 
                         It's a smaller font and the color is lower contrast.
@@ -67,11 +64,11 @@
                     <a class="btn btn-primary" href="./pages/sign-up.html">Sign up</a>
                 </div>
 
-                <div class="hero-image">
+                <figure class="hero-image">
                     <p>
                         this is a placeholder for an image
                     </p>
-                </div>
+                </figure>
             </div>
 
         </section>
