general pages and css fix

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -17,7 +17,7 @@
         <!--Header section containing the Navigation bar and burger mode-->
         <div class="container header-inner">
             <div class="header-logo">
-                Header logo    
+                SyncFlow   
             </div>
             <!--Burger mode code (checkbox hidden through CSS)-->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
