--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -16,7 +16,7 @@
     <header>
         <div class="container header-inner">
             <div class="header-logo">
-                Header logo    
+                SyncFlow   
             </div>
 
             <!-- burger -->
