final touch-ups and clean up of code

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <title>Home (CSS Responsive Template)</title>
+    <title>Contacts | SyncFlow</title>
 </head>
 
 <body>
@@ -54,7 +54,7 @@
         <!-- Page heading for this section (keep the site h1 in header) -->
         <section class="contact" aria-labelledby="contact-title">
             <div class="container contact-inner">
-                <section class="contact-header">
+                <section class="contact-block">
                     <h1 id="contact-title" class="contact-title">Contact us</h1>
                     <p class="contact-intro">
                         Have a question or feedback? Send us a message and we'll get back to you.
@@ -109,7 +109,7 @@
                     <aside class="contact-card contact-info" aria-labelledby="info-title">
                         <h3 id="info-title" class="sr-only">Contact details</h3>
     
-                        <address class="contact-block">
+                        <address>
                             <p class="contact-item">
                                 <i class="fa-solid fa-location-dot contact-icon" aria-hidden="true"></i>
                                 Via Esempio 123, 00100 Roma, Italia
@@ -124,7 +124,7 @@
                             </p>
                         </address>
     
-                        <div class="contact-block">
+                        <div>
                             <h4 class="contact-subtitle">Opening hours</h4>
                             <ul class="contact-hours">
                                 <li>
