removed comments, final version of the project

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A description." />
-    <!-- Font Awesome + site CSS -->
+    <meta name="description"
+        content="Discover our new all-in-one visual collaboration platform that helps your remote team to work in sync." />
     <link rel="stylesheet" href="./assets/vendor/fontawesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="./assets/vendor/fontawesome/css/solid.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -14,11 +14,8 @@
 
 <body>
     <header>
-        <!-- Header: logo + primary nav -->
         <div class="container header-inner">
             <div class="header-logo">SyncFlow</div>
-
-            <!-- Burger (checkbox hack; visually hidden input) -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
                 aria-controls="primary-navigation" />
             <label for="nav-toggle" class="burger">
@@ -47,11 +44,9 @@
     </header>
 
     <main>
-        <!-- hero section -->
         <section class="hero-section">
             <div class="container hero-inner">
                 <div class="hero-copy">
-                    <!-- Make the hero the page H1 (semantic) -->
                     <h1 class="hero-title">Effortless collaboration for creative teams.</h1>
                     <p class="hero-text">
                         SyncFlow is an all-in-one visual collaboration platform that helps your 
@@ -67,7 +62,6 @@
             </div>
         </section>
 
-        <!-- features / info section -->
         <section class="info-section">
             <h2>Features designed for flow.</h2>
 
@@ -106,7 +100,6 @@
             </div>
         </section>
 
-        <!-- quote/testimonial -->
         <section class="quote" aria-labelledby="quote-title">
             <h2 id="quote-title" class="sr-only">Testimonial</h2>
             <div class="container quote-inner">
@@ -124,7 +117,6 @@
             </div>
         </section>
 
-        <!-- CTA -->
         <section class="cta" aria-labelledby="cta-title">
             <div class="container cta-inner">
                 <div class="cta-copy">
@@ -139,7 +131,6 @@
     </main>
 
     <footer>
-        <!-- Footer nav + legal -->
         <div class="container footer-inner">
             <nav class="footer-nav" aria-label="Footer">
                 <ul class="nav-list footer-list">
