--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A description." />
+    <meta name="description"
+        content="Learn more about the history, services that we offer, our values and the people that made SyncFlow possible." />
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
@@ -44,7 +45,6 @@
     </header>
 
     <main>
-        <!-- About hero -->
         <section class="about-hero">
             <div class="container">
                 <h1>Great ideas happen anywhere. We help you bring them together.</h1>
@@ -56,7 +56,6 @@
             </div>
         </section>
 
-        <!-- Origin story -->
         <section class="origin-story">
             <div class="container origin">
                 <div class="story-text">
@@ -86,7 +85,6 @@
             </div>
         </section>
 
-        <!-- What we do -->
         <section class="services-section">
             <h2>What We Do</h2>
             <div class="container services-inner">
@@ -127,7 +125,6 @@
             </div>
         </section>
 
-        <!-- Values -->
         <section class="values-section">
             <h2>Our Values</h2>
             <div class="container values-inner">
@@ -168,7 +165,6 @@
             </div>
         </section>
 
-        <!-- Team -->
         <section class="team-section">
             <h2>Meet the Team</h2>
             <div class="container team-inner">
@@ -208,7 +204,6 @@
             </div>
         </section>
 
-        <!-- CTA -->
         <section class="cta" aria-labelledby="cta-title">
             <div class="container cta-inner">
                 <div class="cta-copy">
