--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Create your account." />
-    <!-- Font Awesome (self-hosted) + site CSS -->
+    <meta name="description"
+        content="Subscribe now to our new all-in-one visual collaboration platform." />
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css">
     <link rel="stylesheet" href="../assets/css/styles.css" />
@@ -19,7 +19,6 @@
                 SyncFlow   
             </div>
 
-            <!-- burger -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation"
                 aria-controls="primary-navigation">
             <label for="nav-toggle" class="burger">
@@ -48,7 +47,6 @@
     </header>
 
     <main>
-        <!-- optional section band, mirrors contact -->
         <section class="signup">
             <div class="container">
                 <section class="signup-block">
@@ -56,9 +54,7 @@
                     <p class="signup-intro">It's quick and easy-then you're in.</p>
                 </section>
 
-                <!-- two-column on desktop, single column on mobile -->
                 <div class="signup-grid">
-                    <!-- left: brief value props -->
                     <aside class="contact-card signup-aside" aria-labelledby="benefits-title">
                         <h3 id="benefits-title" class="contact-subtitle">Why sign up?</h3>
                         <ul class="signup-benefits">
@@ -71,7 +67,6 @@
                         </ul>
                     </aside>
 
-                    <!-- right: the form -->
                     <section class="contact-card" aria-labelledby="signup-form-title">
                         <h3 id="signup-form-title" class="contact-subtitle">Sign up form</h3>
 
