--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A description.">
+    <meta name="description"
+        content="If you have any questions or just want to contact us, feel free to leave a message on the form." />
     <!--link tags containing fontawesome stylesheets for icons and our custom styles.css file-->
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css">
