--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="A description." />
+    <meta name="description"
+        content="Discover our new all-in-one visual collaboration platform that helps your remote team to work in sync." />
     <!-- Font Awesome + site CSS -->
     <link rel="stylesheet" href="./assets/vendor/fontawesome/css/fontawesome.min.css" />
     <link rel="stylesheet" href="./assets/vendor/fontawesome/css/solid.min.css" />
