--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Create your account." />
+    <meta name="description"
+        content="Subscribe now to our new all-in-one visual collaboration platform." />
     <!-- Font Awesome (self-hosted) + site CSS -->
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/vendor/fontawesome/css/solid.min.css">
