updated header and footer navbars with get started page

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -34,10 +34,7 @@
                         <a class="nav-link" href="./about-us.html" aria-current="page">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./sign-up.html">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacts.html">Contact</a>
+                        <a class="nav-link" href="./get-started.html">Get started</a>
                     </li>
                 </ul>
             </nav>
@@ -79,11 +76,11 @@
                     </p>
                 </div>
 
-                <figure class="story-image" aria-label="Founders story image">
+                <picture class="story-image" aria-label="Founders story image">
                     <img src="../assets/images/hero-origin.jpg"
                         alt="Founders collaborating during the early days of SyncFlow." class="img-fluid framed" 
                         loading="eager">
-                </figure>
+                </picture>
             </div>
         </section>
 
@@ -217,7 +214,7 @@
                     <p class="cta-text">See how SyncFlow can bring your creative projects to life.</p>
                 </div>
                 <div class="cta-actions">
-                    <a class="btn btn-outline-primary" href="./sign-up.html">Sign up</a>
+                    <a class="btn btn-outline-primary" href="./get-started.html">Sign up</a>
                 </div>
             </div>
         </section>
@@ -234,10 +231,7 @@
                         <a class="nav-link" href="./about-us.html" aria-current="page">About us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./sign-up.html">Sign up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacts.html">Contact</a>
+                        <a class="nav-link" href="./get-started.html">Get started</a>
                     </li>
                 </ul>
             </nav>
