Changes to style and html of about us

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -86,83 +86,72 @@
 
         <!-- What we do -->
         <section class="services-section">
-            <h2>What We Do</h2>
             <div class="container services-inner">
-
-                <figure class="service-item">
-                    <figcaption>
+                <h2>What We Do</h2>
+                <div class="service-item">
+                    <div class="service-icon">
+                        <img src="../assets/images/visual-whiteboard.png" loading="lazy" alt="Visual Whiteboard" class="framed-160">
+                    </div>
+                    <div class="service-text">
                         <h3>Real-time Visual Whiteboarding</h3>
-                    </figcaption>
-                    <img src="../assets/images/visual-whiteboard.png" loading="lazy" alt="Visual Whiteboard" class="framed-160">
-                    <p class="service-text">
-                        Brainstorm ideas, map out user flows, or give design feedback on an infinite
-                        canvas that updates instantly for everyone.
-                    </p>
-                </figure>
+                        <p>Brainstorm ideas, map out user flows, or give design feedback on an infinite canvas that updates instantly for everyone, making remote creativity truly seamless.</p>
+                    </div>
+                </div>
 
-                <figure class="service-item">
-                    <figcaption>
+                <div class="service-item alt">
+                    <div class="service-icon">
+                        <img src="../assets/images/video-huddles.png" loading="lazy" alt="Video Huddles" class="framed-160">
+                    </div>
+                    <div class="service-text">
                         <h3>Asynchronous Video Updates</h3>
-                    </figcaption>
-                    <img src="../assets/images/video-huddles.png" loading="lazy" alt="Video Huddles" class="framed-160">
-                    <p class="service-text">
-                        Ditch unnecessary meetings. Record quick video updates with screen sharing
-                        to keep projects moving across time zones.
-                    </p>
-                </figure>
+                        <p>Ditch unnecessary meetings across time zones. Record quick video updates with screen sharing to keep projects moving forward efficiently and on your own schedule.</p>
+                    </div>
+                </div>
 
-                <figure class="service-item">
-                    <figcaption>
+                <div class="service-item">
+                    <div class="service-icon">
+                        <img src="../assets/images/ai-assistant.png" loading="lazy" alt="AI Assistant" class="framed-160">
+                    </div>
+                    <div class="service-text">
                         <h3>AI-Powered Workflow Automation</h3>
-                    </figcaption>
-                    <img src="../assets/images/ai-assistant.png" loading="lazy" alt="AI Assistant" class="framed-160">
-                    <p class="service-text">
-                        Let our smart assistant handle the busywork. Automatically generate
-                        summaries, assign tasks, and keep your projects organized.
-                    </p>
-                </figure>
+                        <p>Let our smart assistant handle the busywork. Automatically generate summaries, assign tasks based on discussions, and keep your projects perfectly organized.</p>
+                    </div>
+                </div>
 
             </div>
         </section>
-
+    
         <!-- Values -->
         <section class="values-section">
             <h2>Our Values</h2>
             <div class="container values-inner">
+                <div class="value-item">
+                    <h3>Clarity</h3>
+                    <div class="value-icon">
+                        <img src="../assets/images/value-clarity.png" loading="lazy" alt="Clarity" class="framed-160">
+                    </div>
+                    
+                    <p>We believe in radical transparency and communication, ensuring everyone on the team is on the same page, always. 
+                        No ambiguity, no guessing.</p>
+                </div>
 
-                <figure class="value-item">
-                    <img src="../assets/images/value-clarity.png" loading="lazy" alt="Clarity" class="framed-160">
-                    <figcaption>
-                        <h3>Clarity</h3>
-                        <p>
-                            We believe in radical transparency and communication, ensuring everyone is on the same page,
-                            always.
-                        </p>
-                    </figcaption>
-                </figure>
+                <div class="value-item">
+                    <h3>Flexibility</h3>
+                    <div class="value-icon">
+                        <img src="../assets/images/value-flexibility.png" loading="lazy" alt="Flexibility" class="framed-160">
+                    </div>
+                    <p>We trust our team and our users. We know that great work happens anywhere, anytime, 
+                        and our tools are designed to reflect that freedom and adaptability.</p>
+                </div>
 
-                <figure class="value-item">
-                    <img src="../assets/images/value-flexibility.png" loading="lazy" alt="Flexibility" class="framed-160">
-                    <figcaption>
-                        <h3>Flexibility</h3>
-                        <p>
-                            We trust our team and our users. We know that great work happens anywhere, anytime, and our
-                            tools reflect that.
-                        </p>
-                    </figcaption>
-                </figure>
-
-                <figure class="value-item">
-                    <img src="../assets/images/value-design.png" loading="lazy" alt="Design-Driven" class="framed-160">
-                    <figcaption>
-                        <h3>Design-Driven</h3>
-                        <p>
-                            We are passionate about creating tools that are not only powerful and functional but also a
-                            joy to use.
-                        </p>
-                    </figcaption>
-                </figure>
-
+                <div class="value-item">
+                    <h3>Design-Driven</h3>
+                    <div class="value-icon">
+                        <img src="../assets/images/value-design.png" loading="lazy" alt="Design-Driven" class="framed-160">
+                    </div>
+                    <p>We trust our team and our users. We know that great work happens anywhere, anytime, 
+                        and our tools are designed to reflect that freedom and adaptability.</p>
+                </div>
             </div>
         </section>
 
