--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -88,35 +88,35 @@
         <section class="services-section">
             <div class="container services-inner">
                 <h2>What We Do</h2>
-                <div class="service-item">
+                <figure class="service-item">
                     <div class="service-icon">
                         <img src="../assets/images/visual-whiteboard.png" loading="lazy" alt="Visual Whiteboard" class="framed-160">
                     </div>
-                    <div class="service-text">
+                    <figcaption class="service-text">
                         <h3>Real-time Visual Whiteboarding</h3>
                         <p>Brainstorm ideas, map out user flows, or give design feedback on an infinite canvas that updates instantly for everyone, making remote creativity truly seamless.</p>
-                    </div>
-                </div>
+                    </figcaption>
+                </figure>
 
-                <div class="service-item alt">
+                <figure class="service-item alt">
                     <div class="service-icon">
                         <img src="../assets/images/video-huddles.png" loading="lazy" alt="Video Huddles" class="framed-160">
                     </div>
-                    <div class="service-text">
+                    <figcaption class="service-text">
                         <h3>Asynchronous Video Updates</h3>
                         <p>Ditch unnecessary meetings across time zones. Record quick video updates with screen sharing to keep projects moving forward efficiently and on your own schedule.</p>
-                    </div>
-                </div>
+                    </figcaption>
+                </figure>
 
-                <div class="service-item">
+                <figure class="service-item">
                     <div class="service-icon">
                         <img src="../assets/images/ai-assistant.png" loading="lazy" alt="AI Assistant" class="framed-160">
                     </div>
-                    <div class="service-text">
+                    <figcaption class="service-text">
                         <h3>AI-Powered Workflow Automation</h3>
                         <p>Let our smart assistant handle the busywork. Automatically generate summaries, assign tasks based on discussions, and keep your projects perfectly organized.</p>
-                    </div>
-                </div>
+                    </figcaption>
+                </figure>
 
             </div>
         </section>
@@ -125,33 +125,44 @@
         <section class="values-section">
             <h2>Our Values</h2>
             <div class="container values-inner">
-                <div class="value-item">
+                <figure class="value-item">
                     <h3>Clarity</h3>
                     <div class="value-icon">
                         <img src="../assets/images/value-clarity.png" loading="lazy" alt="Clarity" class="framed-160">
                     </div>
-                    
-                    <p>We believe in radical transparency and communication, ensuring everyone on the team is on the same page, always. 
-                        No ambiguity, no guessing.</p>
-                </div>
+                    <figcaption>
+                        <p>
+                            We believe in radical transparency and communication, ensuring everyone on the team is on the 
+                            same page, always. No ambiguity, no guessing.
+                        </p>
+                    </figcaption>
+                </figure>
 
-                <div class="value-item">
+                <figure class="value-item">
                     <h3>Flexibility</h3>
                     <div class="value-icon">
                         <img src="../assets/images/value-flexibility.png" loading="lazy" alt="Flexibility" class="framed-160">
                     </div>
-                    <p>We trust our team and our users. We know that great work happens anywhere, anytime, 
-                        and our tools are designed to reflect that freedom and adaptability.</p>
-                </div>
+                    <figcaption>
+                        <p>
+                            We trust our team and our users. We know that great work happens anywhere, anytime, 
+                            and our tools are designed to reflect that freedom and adaptability.
+                        </p>
+                    </figcaption>
+                </figure>
 
-                <div class="value-item">
+                <figure class="value-item">
                     <h3>Design-Driven</h3>
                     <div class="value-icon">
                         <img src="../assets/images/value-design.png" loading="lazy" alt="Design-Driven" class="framed-160">
                     </div>
-                    <p>We trust our team and our users. We know that great work happens anywhere, anytime, 
-                        and our tools are designed to reflect that freedom and adaptability.</p>
-                </div>
+                    <figcaption>
+                        <p>
+                            We trust our team and our users. We know that great work happens anywhere, anytime, 
+                            and our tools are designed to reflect that freedom and adaptability.
+                        </p>
+                    </figcaption>
+                </figure>
             </div>
         </section>
 
