--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -94,18 +94,11 @@
                     </div>
                     <figcaption class="service-text">
                         <h3>Real-time Visual Whiteboarding</h3>
-<<<<<<< Updated upstream
-                        <p>Brainstorm ideas, map out user flows, or give design feedback on an infinite canvas that updates instantly for everyone, making remote creativity truly seamless.</p>
+                        <p>Our infinite canvas is a shared digital space where your team’s best ideas come to life. Whether you're running a brainstorming session, mapping out complex user flows, 
+                            or conducting a design review, our lag-free, real-time environment makes it feel like everyone is in the same room. 
+                            With a full suite of tools for sketching, adding notes, and creating diagrams, you can move from a rough concept to a polished wireframe collaboratively, bridging any distance with pure creativity.</p>
                     </figcaption>
                 </figure>
-=======
-                        <p>Our infinite canvas is a shared digital space where your team’s best ideas come to life. 
-                            Whether you're running a brainstorming session, mapping out complex user flows, or conducting a design review, our lag-free, 
-                            real-time environment makes it feel like everyone is in the same room. With a full suite of tools for sketching, adding notes, 
-                            and creating diagrams, you can move from a rough concept to a polished wireframe collaboratively, bridging any distance with pure creativity.</p>
-                    </div>
-                </div>
->>>>>>> Stashed changes
 
                 <figure class="service-item alt">
                     <div class="service-icon">
@@ -113,19 +106,11 @@
                     </div>
                     <figcaption class="service-text">
                         <h3>Asynchronous Video Updates</h3>
-<<<<<<< Updated upstream
-                        <p>Ditch unnecessary meetings across time zones. Record quick video updates with screen sharing to keep projects moving forward efficiently and on your own schedule.</p>
+                        <p>Tired of a calendar packed with back-to-back meetings? SyncFlow’s video huddles are the solution to Zoom fatigue. 
+                            Instead of trying to coordinate schedules across multiple time zones, your team members can record and share detailed project updates complete with screen sharing and annotations. 
+                            This provides all the context of a live call with the flexibility of a text message, allowing everyone to stay informed while reclaiming valuable time for deep, focused work.</p>
                     </figcaption>
                 </figure>
-=======
-                        <p>Tired of a calendar packed with back-to-back meetings? SyncFlow’s video huddles are the solution to Zoom fatigue. 
-                            Instead of trying to coordinate schedules across multiple time zones, your team members can record 
-                            and share detailed project updates complete with screen sharing and annotations. 
-                            This provides all the context of a live call with the flexibility of a text message, 
-                            allowing everyone to stay informed while reclaiming valuable time for deep, focused work.</p>
-                    </div>
-                </div>
->>>>>>> Stashed changes
 
                 <figure class="service-item">
                     <div class="service-icon">
@@ -133,18 +118,12 @@
                     </div>
                     <figcaption class="service-text">
                         <h3>AI-Powered Workflow Automation</h3>
-<<<<<<< Updated upstream
-                        <p>Let our smart assistant handle the busywork. Automatically generate summaries, assign tasks based on discussions, and keep your projects perfectly organized.</p>
-                    </figcaption>
-                </figure>
-=======
                         <p>How much creative energy is lost to administrative tasks? Our AI-powered assistant works in the background to liberate your team from the busywork. 
                             It automatically transcribes video huddles, generates concise summaries, and identifies actionable tasks from your discussions. 
                             These tasks can then be seamlessly added to your project timelines. 
                             The result is a perfectly organized workflow where nothing gets missed, giving your team more time to create and less time to manage.</p>
-                    </div>
-                </div>
->>>>>>> Stashed changes
+                    </figcaption>
+                </figure>
 
             </div>
         </section>
